--- a/apps/app/public/locales/en/common.json
+++ b/apps/app/public/locales/en/common.json
@@ -18,7 +18,7 @@
 	},
 	"badge": {
 		"community-tool-tip": "Community served by this organization.",
-		"service-tool-tip": "Service(s) offered by this organization.",
+		"service-tool-tip": "Service(s) offered by this organization."
 	},
 	"breadcrumb": {
 		"back-to-dynamic": "Back to <u>{{page}}</u>",
