--- a/apps/app/public/locales/en/common.json
+++ b/apps/app/public/locales/en/common.json
@@ -18,7 +18,11 @@
 	},
 	"badge": {
 		"claimed-tool-tip": "This organization has been claimed by a verified representative. <link1>Learn more.</link1>",
+		"claimed-base": "This organization has been claimed by a verified representative.",
+		"claimed-learn-more":"Learn more.",
 		"unclaimed-tool-tip":"This organization has not yet been claimed by a representative. <link1>Claim this organization</link1> to build trust with our community, update your own information, and more.",
+		"unclaimed-base": "This organization has not yet been claimed by a representative.  to build trust with our community, update your own information, and more.",
+		"unclaimed-claim-org": "Claim this organization",
 		"community-tool-tip": "Community served by this organization.",
 		"service-tool-tip": "Service(s) offered by this organization."
 	},
