--- a/apps/app/public/locales/en/common.json
+++ b/apps/app/public/locales/en/common.json
@@ -21,7 +21,8 @@
 		"community-tool-tip": "Community served by this organization.",
 		"remote-tool-tip": "Available remotely",
 		"service-tool-tip": "Service(s) offered by this organization.",
-		"unclaimed-tool-tip": "This organization has not yet been claimed by a representative.<br/><link1>Claim this organization</link1> to build trust with our community, update your own information, and more."
+		"unclaimed-tool-tip": "This organization has not yet been claimed by a representative.<br/><link1>Claim this organization</link1> to build trust with our community, update your own information, and more.",
+		"national-tool-tip": "Offers services throughout {{country}}."
 	},
 	"breadcrumb": {
 		"back-to-dynamic": "Back to <u>{{page}}</u>",
@@ -215,6 +216,9 @@
 		"no-results": "No results found. Please try again.",
 		"organization-placeholder": "Enter organization name...",
 		"suggest-resource": "Can't find it? <1>Suggest an organization</1> you think should be included."
+	},
+	"search-result": {
+		"national": "Offers services throughout {{country}}."
 	},
 	"send-email": "Send email",
 	"service": {
