data migration: add intl crisis support

--- a/apps/app/public/locales/en/gov-dist.json
+++ b/apps/app/public/locales/en/gov-dist.json
@@ -219,6 +219,7 @@
 	"us-alaska-kenai-peninsula-county": "Kenai Peninsula",
 	"us-alaska-ketchikan-gateway-county": "Ketchikan Gateway",
 	"us-alaska-kodiak-island-county": "Kodiak Island",
+	"us-alaska-kusilvak-county": "Kusilvak",
 	"us-alaska-lake-and-peninsula-county": "Lake and Peninsula",
 	"us-alaska-matanuska-susitna-county": "Matanuska-Susitna",
 	"us-alaska-nome-county": "Nome",
@@ -230,7 +231,6 @@
 	"us-alaska-skagway-county": "Skagway",
 	"us-alaska-southeast-fairbanks-county": "Southeast Fairbanks",
 	"us-alaska-valdez-cordova-county": "Valdez-Cordova",
-	"us-alaska-wade-hampton-county": "Wade Hampton",
 	"us-alaska-wrangell-county": "Wrangell",
 	"us-alaska-yakutat-county": "Yakutat",
 	"us-alaska-yukon-koyukuk-county": "Yukon-Koyukuk",
@@ -763,8 +763,8 @@
 	"us-illinois-cook-county": "Cook",
 	"us-illinois-crawford-county": "Crawford",
 	"us-illinois-cumberland-county": "Cumberland",
-	"us-illinois-de-witt-county": "De Witt",
 	"us-illinois-dekalb-county": "DeKalb",
+	"us-illinois-dewitt-county": "DeWitt",
 	"us-illinois-douglas-county": "Douglas",
 	"us-illinois-dupage-county": "DuPage",
 	"us-illinois-edgar-county": "Edgar",
@@ -1208,7 +1208,7 @@
 	"us-kentucky-kenton-county": "Kenton",
 	"us-kentucky-knott-county": "Knott",
 	"us-kentucky-knox-county": "Knox",
-	"us-kentucky-larue-county": "Larue",
+	"us-kentucky-larue-county": "LaRue",
 	"us-kentucky-laurel-county": "Laurel",
 	"us-kentucky-lawrence-county": "Lawrence",
 	"us-kentucky-lee-county": "Lee",
@@ -1283,7 +1283,7 @@
 	"us-louisiana-catahoula-county": "Catahoula",
 	"us-louisiana-claiborne-county": "Claiborne",
 	"us-louisiana-concordia-county": "Concordia",
-	"us-louisiana-de-soto-county": "De Soto",
+	"us-louisiana-desoto-county": "DeSoto",
 	"us-louisiana-east-baton-rouge-county": "East Baton Rouge",
 	"us-louisiana-east-carroll-county": "East Carroll",
 	"us-louisiana-east-feliciana-county": "East Feliciana",
@@ -1933,7 +1933,7 @@
 	"us-new-hampshire-belknap-county": "Belknap",
 	"us-new-hampshire-carroll-county": "Carroll",
 	"us-new-hampshire-cheshire-county": "Cheshire",
-	"us-new-hampshire-coos-county": "Coos",
+	"us-new-hampshire-coos-county": "Coös",
 	"us-new-hampshire-grafton-county": "Grafton",
 	"us-new-hampshire-hillsborough-county": "Hillsborough",
 	"us-new-hampshire-merrimack-county": "Merrimack",
@@ -2343,7 +2343,7 @@
 	"us-oklahoma-kingfisher-county": "Kingfisher",
 	"us-oklahoma-kiowa-county": "Kiowa",
 	"us-oklahoma-latimer-county": "Latimer",
-	"us-oklahoma-le-flore-county": "Le Flore",
+	"us-oklahoma-leflore-county": "LeFlore",
 	"us-oklahoma-lincoln-county": "Lincoln",
 	"us-oklahoma-logan-county": "Logan",
 	"us-oklahoma-love-county": "Love",
@@ -2590,12 +2590,12 @@
 	"us-south-dakota-miner-county": "Miner",
 	"us-south-dakota-minnehaha-county": "Minnehaha",
 	"us-south-dakota-moody-county": "Moody",
+	"us-south-dakota-oglala-lakota-county": "Oglala Lakota",
 	"us-south-dakota-pennington-county": "Pennington",
 	"us-south-dakota-perkins-county": "Perkins",
 	"us-south-dakota-potter-county": "Potter",
 	"us-south-dakota-roberts-county": "Roberts",
 	"us-south-dakota-sanborn-county": "Sanborn",
-	"us-south-dakota-shannon-county": "Shannon",
 	"us-south-dakota-spink-county": "Spink",
 	"us-south-dakota-stanley-county": "Stanley",
 	"us-south-dakota-sully-county": "Sully",
