create intl crisis page

--- a/apps/app/public/locales/en/common.json
+++ b/apps/app/public/locales/en/common.json
@@ -99,6 +99,13 @@
 	"inreach-copyright": "InReach, Inc. {{year}} • All rights reserved • InReach ❤️ Open Source",
 	"inreach-logo": "InReach logo",
 	"inreach-org": "InReach.org",
+	"intl-crisis": {
+		"outside-service-area": "Inreach does not operate in {{country}}",
+		"stay-safe": "<Title3>📣 Please stay safe online</Title3>\n<Text>Visiting any of these websites <strong>may leave a record on your computer or browser</strong>, just like any website does after you visit it. Please take steps to avoid unsafe situations in your own area.</Text>",
+		"these-verified": "These verified resources can help the LGBTQ+ community anywhere in the world.",
+		"we-recommend": "We recommend these international resources",
+		"who-this-serves": "<Text><strong>Who this resource serves:</strong> {{targetPop}}</Text>"
+	},
 	"language": "Language",
 	"language_all-other": "All other languages",
 	"language_choose": "Please choose a language",
@@ -372,6 +379,7 @@
 		"sign-up": "Sign up",
 		"skip": "Skip",
 		"support": "Support",
+		"website": "Website",
 		"yes": "Yes"
 	}
 }
