--- a/apps/app/public/locales/en/services.json
+++ b/apps/app/public/locales/en/services.json
@@ -22,6 +22,10 @@
 		"CATEGORYNAME": "Computers and Internet",
 		"computers-and-internet": "Computers and internet"
 	},
+	"crisis-support": {
+		"CATEGORYNAME": "Crisis Support",
+		"crisis-support": "Crisis Support"
+	},
 	"education-and-employment": {
 		"CATEGORYNAME": "Education and Employment",
 		"career-counseling": "Career counseling",
