--- a/apps/app/public/locales/en/common.json
+++ b/apps/app/public/locales/en/common.json
@@ -1,5 +1,8 @@
 {
 	"about-us": "About Us",
+	"access": {
+		"sms-with-body": "Text <strong>{{body}}</strong> to {{code}}"
+	},
 	"accessible-building_false": "This building is NOT wheelchair accessible",
 	"accessible-building_true": "This building is wheelchair accessible",
 	"account": "Account",
@@ -50,6 +53,15 @@
 	},
 	"country-select": "Choose a country",
 	"create-new-list": "Create new list",
+	"crisis-support": {
+		"intl-stay-safe": "<Title3>📣 Please stay safe online</Title3>\n<Text>Visiting any of these websites <strong>may leave a record on your computer or browser</strong>, just like any website does after you visit it. Please take steps to avoid unsafe situations in your own area.</Text>",
+		"intl-these-verified": "These verified resources can help the LGBTQ+ community anywhere in the world.",
+		"intl-we-recommend": "We recommend these international resources",
+		"natl-find-help-now": "Find help now",
+		"natl-these-verified": "<Text>These verified resources can help the LGBTQ+ community in the United States. These services are <strong>remotely available, confidential,</strong> and <strong>free</strong>.</Text>",
+		"outside-service-area": "Inreach does not operate in {{country}}",
+		"who-this-serves": "<Text><strong>Who this resource serves:</strong> {{targetPop}}</Text>"
+	},
 	"current-location": "Current location",
 	"delete-account": "Delete your account?",
 	"delete-account-password": "Enter your account password to confirm.",
@@ -99,13 +111,6 @@
 	"inreach-copyright": "InReach, Inc. {{year}} • All rights reserved • InReach ❤️ Open Source",
 	"inreach-logo": "InReach logo",
 	"inreach-org": "InReach.org",
-	"intl-crisis": {
-		"outside-service-area": "Inreach does not operate in {{country}}",
-		"stay-safe": "<Title3>📣 Please stay safe online</Title3>\n<Text>Visiting any of these websites <strong>may leave a record on your computer or browser</strong>, just like any website does after you visit it. Please take steps to avoid unsafe situations in your own area.</Text>",
-		"these-verified": "These verified resources can help the LGBTQ+ community anywhere in the world.",
-		"we-recommend": "We recommend these international resources",
-		"who-this-serves": "<Text><strong>Who this resource serves:</strong> {{targetPop}}</Text>"
-	},
 	"language": "Language",
 	"language_all-other": "All other languages",
 	"language_choose": "Please choose a language",
