--- a/apps/app/public/locales/en/common.json
+++ b/apps/app/public/locales/en/common.json
@@ -227,6 +227,7 @@
 		"location-placeholder-searchby": "Search by city or zip code...",
 		"look-up-org": "Look up an organization by name",
 		"no-results": "No results found. Please try again.",
+		"no-results-adjust": "No results found for your search. Try adjusting your selected location or filters.",
 		"organization-placeholder": "Enter organization name...",
 		"organization-placeholder-searchby": "Search by organization name...",
 		"suggest-resource": "Can't find it? <1>Suggest an organization</1> you think should be included."
