custom error pages

--- a/apps/app/public/locales/en/common.json
+++ b/apps/app/public/locales/en/common.json
@@ -84,6 +84,10 @@
     "enter-password-placeholder": "Enter password...",
     "enter-review": "Enter your review...",
     "errors": {
+        "404-body": "We're sorry, the page you're looking for doesn't exist or has been moved. Start a search below to find safe, verified resources for the diverse LGBTQ+ community in your area.",
+        "404-title": "404: Page not found.",
+        "500-body": "We're sorry, something went wrong with our server. Please try again later, or start a search below to find safe, verified LGBTQ+ resources in your area.",
+        "500-title": "500: Something went wrong.",
         "oh-no": "Oh no!",
         "try-again-text": "<Text>Something went wrong! Please try again.</Text>"
     },
