--- a/apps/app/public/locales/en/common.json
+++ b/apps/app/public/locales/en/common.json
@@ -371,6 +371,7 @@
     "visit": "Visit",
     "website_one": "Website",
     "website_other": "Websites",
+    "welcome-name": "Welcome, {{name}}!",
     "words": {
         "accept": "Accept",
         "account": "Account",
