edit mode toolbar

--- a/apps/app/public/locales/en/common.json
+++ b/apps/app/public/locales/en/common.json
@@ -95,6 +95,9 @@
         "try-again-text": "<Text>Something went wrong! Please try again.</Text>"
     },
     "exclude": "Exclude",
+    "exit": {
+        "edit-mode": "Exit edit mode"
+    },
     "filter-by-service": "Filter by services",
     "find-resources": "Find resources",
     "find-x": "Find {{value}}",
@@ -396,9 +399,13 @@
         "please-wait": "Please wait...",
         "prev": "Prev",
         "print": "Print",
+        "publish": "Publish",
+        "restore": "Restore",
+        "reverify": "Reverify",
         "review": "Review",
         "reviews": "Reviews",
         "save": "Save",
+        "save-changes": "Save changes",
         "saved": "Saved",
         "search": "Search",
         "service-hours": "Service hours",
@@ -407,6 +414,7 @@
         "sign-up": "Sign up",
         "skip": "Skip",
         "support": "Support",
+        "unpublish": "Unpublish",
         "website": "Website",
         "yes": "Yes"
     }
